# up-law-mcp

./: CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  SOURCES.md  mcp-manifest.yaml  my_tools.py  pyproject.toml  sources.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/consumidor/: SOURCES.md  my_tools.py  sources.yaml
legalmcp/: __init__.py  __main__.py  contract.py  server.py  sources.py
tests/: conftest.py  test_contract.py  test_my_tools.py
